more updates to Jump To and Search. As well as fixed a bug w/ the refresh hotkey

--- a/awx/ui/client/features/networking/_index.less
+++ b/awx/ui/client/features/networking/_index.less
@@ -190,7 +190,10 @@
 }
 
 .Networking-searchBarContainer{
-    height: 30px
+    height: 30px;
+    flex: 1 0 auto;
+    display: flex;
+    margin-top:-5px;
 }
 
 .Networking-searchButton{
